--- a/service-two/Chart.yaml
+++ b/service-two/Chart.yaml
@@ -1,5 +1,5 @@
 apiVersion: v2
-name: service-one
+name: service-two
 description: A Helm chart for Kubernetes
 
 # A chart can be either an 'application' or a 'library' chart.
