--- a/argoapps/templates/service-one-application.yaml
+++ b/argoapps/templates/service-one-application.yaml
@@ -2,6 +2,7 @@ apiVersion: argoproj.io/v1alpha1
 kind: Application
 metadata:
   name: service-one
+  namespace: {{ .Values.destination.namespace }}
 spec:
   project: default
   source:
