--- a/argoapps/templates/cicd-application.yaml
+++ b/argoapps/templates/cicd-application.yaml
@@ -2,7 +2,7 @@ apiVersion: argoproj.io/v1alpha1
 kind: Application
 metadata:
   name: cicd
-  namespace: {{ .Values.destination.namespace }}
+  namespace: cicd
 spec:
   project: default
   source:
@@ -11,4 +11,4 @@ spec:
     targetRevision: HEAD
   destination:
     server: 'https://kubernetes.default.svc'
-    namespace: {{ .Values.destination.namespace }}
+    namespace: cicd
