--- a/argoapps/templates/service-two-application.yaml
+++ b/argoapps/templates/service-two-application.yaml
@@ -2,7 +2,6 @@ apiVersion: argoproj.io/v1alpha1
 kind: Application
 metadata:
   name: service-two
-  namespace: {{ .Values.destination.namespace }}
 spec:
   project: default
   source:
@@ -11,4 +10,4 @@ spec:
     targetRevision: HEAD
   destination:
     server: 'https://kubernetes.default.svc'
-    namespace: {{ .Values.destination.namespace }}
+    namespace: demo
