--- a/cicd/templates/Pipelines.yaml
+++ b/cicd/templates/Pipelines.yaml
@@ -75,7 +75,7 @@ spec:
         - name: source
           workspace: app
         - name: dockerconfig
-          workspace: quayio
+          workspace: quaysecret
     - name: git-clone-gitops
       params:
         - name: url
@@ -144,7 +144,7 @@ spec:
           workspace: githubsecret
   workspaces:
     - name: app
-    - name: quayio
+    - name: quaysecret
     - name: gitops
     - name: githubsecret
 ---
@@ -225,7 +225,7 @@ spec:
         - name: source
           workspace: app
         - name: dockerconfig
-          workspace: quayio
+          workspace: quaysecret
     - name: git-clone-gitops
       params:
         - name: url
@@ -294,6 +294,6 @@ spec:
           workspace: githubsecret
   workspaces:
     - name: app
-    - name: quayio
+    - name: quaysecret
     - name: gitops
     - name: githubsecret
