--- a/cicd/templates/Secrets.yaml
+++ b/cicd/templates/Secrets.yaml
@@ -3,7 +3,7 @@ apiVersion: v1
 metadata:
   name: quaysecret
 data:
-  config.json: {{ .Values.dockerconfigjson | b64encode }}
+  config.json: {{ .Values.dockerconfigjson | b64enc }}
 type: Opaque
 ---
 kind: Secret
