--- a/service-two/templates/secret.yaml
+++ b/service-two/templates/secret.yaml
@@ -4,6 +4,6 @@ metadata:
   name: postgres
 type: Opaque
 data:
-  database-name: cG9zdGdyZXM=
-  database-password: cG9zdGdyZXM=
-  database-user: cG9zdGdyZXM=
+  database-name: {{ .Values.database.name | b64enc }}
+  database-password: {{ .Values.database.password | b64enc }}
+  database-user: {{ .Values.database.user | b64enc }}
