--- a/service-two/values.yaml
+++ b/service-two/values.yaml
@@ -2,6 +2,6 @@ registry: quay.io/rh_ee_sshirodk
 image:
   tag: "cb395d12daf6dedbfeb77f3849987351aedbda96"
 database:
-  name: 
-  password: 
-  user: 
+  name: cG9zdGdyZXM=
+  password: cG9zdGdyZXM=
+  user: cG9zdGdyZXM=
