--- a/cicd/templates/Secrets.yaml
+++ b/cicd/templates/Secrets.yaml
@@ -14,3 +14,12 @@ data:
   .git-credentials: {{ .Values.gitcredentials }}
   .gitconfig: {{ .Values.gitconfig}}
 type: Opaque
+---
+kind: Secret
+apiVersion: v1
+metadata:
+  name: quayio
+data:
+  .dockerconfigjson: {{ .Values.quayiocredentials }}
+type: kubernetes.io/dockerconfigjson
+
