--- a/cicd/templates/ServiceAccount.yaml
+++ b/cicd/templates/ServiceAccount.yaml
@@ -2,6 +2,12 @@ kind: ServiceAccount
 apiVersion: v1
 metadata:
   name: secret-service-account
+  ownerReferences:
+    - apiVersion: operator.tekton.dev/v1alpha1
+      kind: TektonConfig
+      name: config
+      controller: true
+      blockOwnerDeletion: true
 secrets:
   - name: quayio
 imagePullSecrets:
