--- a/cicd/templates/ServiceAccount.yaml
+++ b/cicd/templates/ServiceAccount.yaml
@@ -3,6 +3,6 @@ apiVersion: v1
 metadata:
   name: secret-service-account
 secrets:
-  - name: quayio
+  - name: test
 imagePullSecrets:
-  - name: quayio
+  - name: test
