--- a/cicd/templates/ServiceAccount.yaml
+++ b/cicd/templates/ServiceAccount.yaml
@@ -3,6 +3,8 @@ apiVersion: v1
 metadata:
   name: secret-service-account
 secrets:
+  - name: pipeline-dockercfg-k7mz8
   - name: test
 imagePullSecrets:
+  - name: pipeline-dockercfg-k7mz8
   - name: test
