--- a/cicd/templates/Secrets.yaml
+++ b/cicd/templates/Secrets.yaml
@@ -19,6 +19,8 @@ kind: Secret
 apiVersion: v1
 metadata:
   name: quayio
+  annotations:
+    tekton.dev/docker-0: 'https://quay.io/'
 data:
   .dockerconfigjson: {{ .Values.quayiocredentials }}
 type: kubernetes.io/dockerconfigjson
