--- a/cicd/templates/Secrets.yaml
+++ b/cicd/templates/Secrets.yaml
@@ -22,6 +22,6 @@ metadata:
   annotations:
     tekton.dev/docker-0: 'https://quay.io/'
 data:
-  .dockerconfigjson: {{ .Values.quayiocredentials }}
+  .dockerconfigjson: {{ .Values.quaycredentials }}
 type: kubernetes.io/dockerconfigjson
 
