--- a/service-one/templates/deployment.yaml
+++ b/service-one/templates/deployment.yaml
@@ -24,6 +24,6 @@ spec:
             - configMapRef:
                 name: service-one-config
       imagePullSecrets:
-        - name: quaysecret
+        - name: quayio
   strategy:
     type: RollingUpdate
