--- a/service-one/templates/secret.yaml
+++ b/service-one/templates/secret.yaml
@@ -1,7 +1,7 @@
 kind: Secret
 apiVersion: v1
 metadata:
-  name: quaysecret
+  name: quayio
 data:
-  .dockerconfigjson: {{ .Values.dockerconfigjson }}
+  .dockerconfigjson: {{ .Values.quaycredentials }}
 type: kubernetes.io/dockerconfigjson
