--- a/cicd/templates/Pipelines.yaml
+++ b/cicd/templates/Pipelines.yaml
@@ -129,7 +129,7 @@ spec:
         - name: userHome
           value: /home/git
       runAfter:
-        - s2i-java
+        - skopeo-copy
       taskRef:
         kind: ClusterTask
         name: git-clone
@@ -298,7 +298,7 @@ spec:
         - name: userHome
           value: /home/git
       runAfter:
-        - s2i-java
+        - skopeo-copy
       taskRef:
         kind: ClusterTask
         name: git-clone
