--- a/service-one/templates/service.yaml
+++ b/service-one/templates/service.yaml
@@ -10,6 +10,10 @@ spec:
       protocol: TCP
       port: 8080
       targetPort: 8080
+    - name: 8443-tcp
+      protocol: TCP
+      port: 8443
+      targetPort: 8080
   type: ClusterIP
   selector:
     app: service-one
