--- a/service-one/templates/virtualservice.yaml
+++ b/service-one/templates/virtualservice.yaml
@@ -13,3 +13,8 @@ spec:
          host: service-one
          port:
            number: 8080
+   - route:
+     - destination:
+         host: service-one
+         port:
+           number: 8443
